--- a/pages/16197.html
+++ b/pages/16197.html
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -329,7 +334,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -881,15 +892,22 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="gravity">Gravity</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></strong></p><h2 id="formalism">Formalism</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></strong></p>
+
+<h2 id="formalism">Formalism</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Poincar%C3%A9+Lie+algebra">Poincaré Lie algebra</a></p>
 
@@ -915,7 +933,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="definition">Definition</h2><ul>
+</ul>
+
+<h2 id="definition">Definition</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Einstein-Hilbert+action">Einstein-Hilbert action</a>, <a class="existingWikiWord" href="/nlab/show/Einstein%27s+equations">Einstein's equations</a>, <a class="existingWikiWord" href="/nlab/show/general+relativity">general relativity</a></p>
 
@@ -929,7 +951,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="spacetime_configurations">Spacetime configurations</h2><ul>
+</ul>
+
+<h2 id="spacetime_configurations">Spacetime configurations</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a></p>
 </li>
@@ -951,7 +977,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="properties">Properties</h2><ul>
+</ul>
+
+<h2 id="properties">Properties</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Kaluza-Klein+mechanism">Kaluza-Klein mechanism</a></p>
 </li>
@@ -971,7 +1001,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/weak+gravity+conjecture">weak gravity conjecture</a></p>
 </li>
-</ul><h2 id="spacetimes">Spacetimes</h2><ul>
+</ul>
+
+<h2 id="spacetimes">Spacetimes</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/standard+model+of+cosmology">standard model of cosmology</a></p>
 </li>
@@ -979,9 +1013,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a></p>
 </li>
-</ul><table><thead><tr><th><strong> </strong></th><th>vanishing </th><th>positive </th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-<tr><td style="text-align: left;"><strong>positive </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-</tbody></table><ul>
+</ul>
+
+<table><thead><tr><th><strong><a class="existingWikiWord" href="/nlab/show/black+hole">black hole</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a></strong></th><th>vanishing <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th><th><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Schwarzschild+spacetime">Schwarzschild spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr+spacetime">Kerr spacetime</a></td></tr>
+<tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Reissner-Nordstrom+spacetime">Reissner-Nordstrom spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr-Newman+spacetime">Kerr-Newman spacetime</a></td></tr>
+</tbody></table>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/asymptotically+flat+spacetime">asymptotically flat spacetime</a></p>
 </li>
@@ -1029,7 +1067,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></p>
 </li>
-</ul><h2 id="quantum_theory">Quantum theory</h2><ul>
+</ul>
+
+<h2 id="quantum_theory">Quantum theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></p>
 
@@ -1043,7 +1085,8 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul></div>
+</ul>
+</div></div>
 </div>
 </div>
 
@@ -1188,6 +1231,18 @@ margin-left: 0em;
 
 <li id="Dalianis16">
 <p><a class="existingWikiWord" href="/nlab/show/Ioannis+Dalianis">Ioannis Dalianis</a>, <em>Features and implications of the plateau inflationary potentials</em>, Planck 2015 conference contribution (<a href="http://arxiv.org/abs/1602.05026">arXiv:1602.05026</a>)</p>
+</li>
+</ul>
+
+<p>Discussion with more general <a class="existingWikiWord" href="/nlab/show/higher+curvature+corrections">higher curvature corrections</a>:</p>
+
+<ul>
+<li id="AEJ18">
+<p>Gustavo Arciniega, Jose D. Edelstein, Luisa G. Jaime, <em>Towards purely geometric inflation and late time acceleration</em> (<a href="https://arxiv.org/abs/1810.08166">arXiv:1810.08166</a>)</p>
+</li>
+
+<li>
+<p>Gustavo Arciniega, Pablo Bueno, Pablo A. Cano, Jose D. Edelstein, Robie A. Hennigar, Luisa G. Jaimem, <em>Geometric Inflation</em> (<a href="https://arxiv.org/abs/1812.11187">arXiv:1812.11187</a>)</p>
 </li>
 </ul>
 
@@ -1366,14 +1421,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 03:56:43.
+  Last revised on January  1, 2019 at 10:06:06.
   See the <a href="https://ncatlab.org/nlab/history/Starobinsky model of cosmic inflation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Starobinsky+model+of+cosmic+inflation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Starobinsky+model+of+cosmic+inflation/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/Starobinsky+model+of+cosmic+inflation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Starobinsky+model+of+cosmic+inflation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Starobinsky+model+of+cosmic+inflation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Starobinsky+model+of+cosmic+inflation/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/Starobinsky+model+of+cosmic+inflation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Starobinsky+model+of+cosmic+inflation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Starobinsky model of cosmic inflation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
