--- a/pages/15523.html
+++ b/pages/15523.html
@@ -751,20 +751,26 @@ margin-left: 0em;
 <ul>
 <li id="HirschNeumann75">U. Hirsch, W. D. Neumann, <em>On cyclic branched coverings of spheres</em>, Math. Ann. (1975) 215: 289 (<a href="https://doi.org/10.1007/BF01343895">doi:10.1007/BF01343895</a>)</li>
 </ul>
+
+<p>Relation to <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a>:</p>
+
+<ul>
+<li>Benoît Claudon, <em>Gamma-reduction for smooth orbifolds</em>, Manuscripta Mathematica 127, 4 (2008) 521-532 (<a href="https://arxiv.org/abs/0801.4677">arXiv:0801.4677</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 10:15:00.
+  Last revised on January  1, 2019 at 16:03:52.
   See the <a href="https://ncatlab.org/nlab/history/branched cover" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/branched+cover" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/branched+cover/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/branched+cover" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/branched+cover" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/branched+cover" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/branched+cover/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/branched+cover" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/branched+cover" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/branched cover/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
