--- a/pages/19934.html
+++ b/pages/19934.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9269/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9269/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -559,6 +559,7 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
 <li><a href='#examples'>Examples</a></li>
 <ul>
 <li><a href='#noncompact_orbifolds'>Non-compact orbifolds</a></li>
@@ -587,9 +588,19 @@ margin-left: 0em;
 
 <p>A Riemannian orbifold is an <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> equipped with an orbifold <a class="existingWikiWord" href="/nlab/show/atlas">atlas</a> where each <a class="existingWikiWord" href="/nlab/show/chart">chart</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mover><mi>U</mi><mo>^</mo></mover> <mi>i</mi></msub><mo>,</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\widehat{U}_i, G)</annotation></semantics></math> is equipped with a <a class="existingWikiWord" href="/nlab/show/Riemannian+metric">Riemannian metric</a> such that the <a class="existingWikiWord" href="/nlab/show/action">action</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is by <a class="existingWikiWord" href="/nlab/show/isometries">isometries</a>, and such that the transition functions from one chart to the other are isometries.</p>
 
-<p>A key aspect is that the orbifold <a class="existingWikiWord" href="/nlab/show/singularities">singularities</a> behave like carrying singular <a class="existingWikiWord" href="/nlab/show/curvature">curvature</a>, notably there are <a class="existingWikiWord" href="/nlab/show/flat+orbifolds">flat orbifolds</a> (i.e. Riemannian orbifolds with vanishing <a class="existingWikiWord" href="/nlab/show/Riemann+curvature">Riemann curvature</a> away from the <a class="existingWikiWord" href="/nlab/show/singularities">singularities</a>) whose underlying <a class="existingWikiWord" href="/nlab/show/topological+spaces">topological spaces</a> are <a class="existingWikiWord" href="/nlab/show/n-spheres">n-spheres</a> (see <a href="#FlatCompact2DimensionalOrbifolds">below</a>).</p>
+<p>A key aspect is that the orbifold <a class="existingWikiWord" href="/nlab/show/singularities">singularities</a> behave like carrying singular <a class="existingWikiWord" href="/nlab/show/curvature">curvature</a>, notably there are <a class="existingWikiWord" href="/nlab/show/flat+orbifolds">flat orbifolds</a> (also “Euclidean orbifolds”, i.e. Riemannian orbifolds with vanishing <a class="existingWikiWord" href="/nlab/show/Riemann+curvature">Riemann curvature</a> away from the <a class="existingWikiWord" href="/nlab/show/singularities">singularities</a>) whose underlying <a class="existingWikiWord" href="/nlab/show/topological+spaces">topological spaces</a> are <a class="existingWikiWord" href="/nlab/show/n-spheres">n-spheres</a> (see <a href="#FlatCompact2DimensionalOrbifolds">below</a>).</p>
 
 <p>Key examples of flat orbifolds are global <a class="existingWikiWord" href="/nlab/show/homotopy+quotients">homotopy quotients</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>𝕋</mi> <mi>n</mi></msup><mo>⫽</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathbb{T}^n \sslash G</annotation></semantics></math> of the <a class="existingWikiWord" href="/nlab/show/n-torus">n-torus</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>𝕋</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{T}^n</annotation></semantics></math> equipped with its canonical flat <a class="existingWikiWord" href="/nlab/show/Riemannian+metric">Riemannian metric</a>. These flat orbifolds are called <em>toroidal orbifolds</em>.</p>
+
+<h2 id="properties">Properties</h2>
+
+<blockquote>
+<p>under construction</p>
+</blockquote>
+
+<p>Ever flat orbifold whose underlying <a class="existingWikiWord" href="/nlab/show/metric+space">metric space</a> is <a class="existingWikiWord" href="/nlab/show/connected+topological+space">connected</a> and <a class="existingWikiWord" href="/nlab/show/complete+metric+space">complete</a>) is a global quotient of <a class="existingWikiWord" href="/nlab/show/Euclidean+space">Euclidean space</a>/<a class="existingWikiWord" href="/nlab/show/Cartesian+space">Cartesian space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^n</annotation></semantics></math></p>
+
+<p>(<a href="#Ratcliffe06">Ratcliffe 06, 13.3.10</a>)</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -632,6 +643,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p>Joseph Ernest Borzellino, <em>Riemannian Geometry of Orbifolds</em>, 1992 (<a href="http://mathnet.kaist.ac.kr/mathnet/paper_file/California/Polytech/Borze/dis.pdf">pdf 1</a>, <a href="https://web.calpoly.edu/~jborzell/Publications/Publication%20PDFs/phd_thesis.pdf">pdf 2</a>)</p>
+</li>
+
+<li id="Ratcliffe06">
+<p>John Ratcliffe, <em>Geometric Orbifolds</em>, chapter 13 in <em>Foundations of Hyperbolic Manifolds</em>, Springer 2006</p>
 </li>
 
 <li>
@@ -698,14 +713,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 12, 2018 at 11:56:43.
+  Last revised on January  1, 2019 at 16:56:35.
   See the <a href="https://ncatlab.org/nlab/history/Riemannian orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Riemannian orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
