--- a/pages/1594.html
+++ b/pages/1594.html
@@ -1096,6 +1096,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Textbook account:</p>
+
+<ul>
+<li id="Ratcliffe06">John Ratcliffe, <em>Geometric Orbifolds</em>, chapter 13 in <em>Foundations of Hyperbolic Manifolds</em>, Springer 2006</li>
+</ul>
+
 <p>On <a class="existingWikiWord" href="/nlab/show/Riemannian+orbifolds">Riemannian orbifolds</a>:</p>
 
 <ul>
@@ -1249,14 +1255,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 12, 2018 at 11:50:58.
+  Last revised on January  1, 2019 at 16:28:36.
   See the <a href="https://ncatlab.org/nlab/history/orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/54" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(54 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
