--- a/pages/20031.html
+++ b/pages/20031.html
@@ -309,22 +309,30 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>References</title></head>
 <body>
-<p>Brownian motion is an example of a <a href="https://ncatlab.org/nlab/show/stochastic+process">stochastic process</a>. Brownian motion <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>B</mi> <mi>t</mi></msub></mrow><annotation encoding="application/x-tex">B_t</annotation></semantics></math> is a stochastic process on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">[0,\infty)</annotation></semantics></math> with the following properties:</p>
+<p>Brownian motion is an example of a <a class="existingWikiWord" href="/nlab/show/stochastic+process">stochastic process</a>. Brownian motion <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>B</mi> <mi>t</mi></msub></mrow><annotation encoding="application/x-tex">B_t</annotation></semantics></math> is a stochastic process on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">[0,\infty)</annotation></semantics></math> with the following properties:</p>
 
 <ul>
 <li>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>B</mi> <mn>0</mn></msub><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">B_0=0</annotation></semantics></math> a.s.</p>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>B</mi> <mn>0</mn></msub><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">B_0=0</annotation></semantics></math> almost surely.</p>
 </li>
 
 <li>
-<p>The increments <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>B</mi> <mi>t</mi></msub><mo>−</mo><msub><mi>B</mi> <mi>s</mi></msub></mrow><annotation encoding="application/x-tex">B_t-B_s</annotation></semantics></math> are independent and distributed <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo stretchy="false">(</mo><mn>0</mn><mo>,</mo><mi>t</mi><mo>−</mo><mi>s</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathcal{N}(0,t-s)</annotation></semantics></math> for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>t</mi><mo>&gt;</mo><mi>s</mi></mrow><annotation encoding="application/x-tex">t \gt s</annotation></semantics></math>.</p>
+<p>The increments <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>B</mi> <mi>t</mi></msub><mo>−</mo><msub><mi>B</mi> <mi>s</mi></msub></mrow><annotation encoding="application/x-tex">B_t-B_s</annotation></semantics></math> are independent and normally distributed <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo stretchy="false">(</mo><mn>0</mn><mo>,</mo><mi>t</mi><mo>−</mo><mi>s</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">N(0,t-s)</annotation></semantics></math> for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>t</mi><mo>&gt;</mo><mi>s</mi></mrow><annotation encoding="application/x-tex">t \gt s</annotation></semantics></math>.</p>
 </li>
 
 <li>
 <p>The function <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>t</mi><mo>↦</mo><msub><mi>B</mi> <mi>t</mi></msub></mrow><annotation encoding="application/x-tex">t\mapsto B_t</annotation></semantics></math> is continuous.</p>
 </li>
+</ul>
+
+<h2 id="references">References</h2>
+
+<p>For now see</p>
+
+<ul>
+<li>Wikipedia <a href="https://en.wikipedia.org/wiki/Brownian_motion">Brownian motion</a></li>
 </ul>
 </body></html>
 
@@ -332,14 +340,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on January  1, 2019 at 16:04:29.
+  Last revised on January  1, 2019 at 17:08:18.
   See the <a href="https://ncatlab.org/nlab/history/Brownian motion" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Brownian+motion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Brownian+motion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Brownian+motion/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Brownian+motion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Brownian+motion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Brownian motion/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
