--- a/pages/438.html
+++ b/pages/438.html
@@ -309,49 +309,52 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p>I was until 2006 a professor of mathematics at the University of Wales Bangor (aka University of Bangor). The University closed down the Mathematics degree and I was ‘retired’! Since then I have been on various interesting visiting positions, whilst being Emeritus, until recently retaining an office in the Computer Science section of the university and continuing to work at least as hard as before (so I claim). I am also an emeritus member of <a href='http://www.wimcs.ac.uk/'>WIMCS</a>, the Wales Institute of Mathematical and Computational Sciences and a Fellow of the <a href='https://www.learnedsociety.wales/'>Learned Society of Wales</a>, a recently formed society that seeks to act as an Academy of learning of the kind that has long existed elsewhere in the United Kingdom and worldwide, but not in Wales.</p>
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<body>
+<p>I was until 2006 a professor of mathematics at the University of Wales Bangor (aka University of Bangor). The University closed down the Mathematics degree and I was ‘retired’! Since then I have been on various interesting visiting positions, whilst being Emeritus, until recently retaining an office in the Computer Science section of the university and continuing to work at least as hard as before (so I claim). I am also an emeritus member of <a href="http://www.wimcs.ac.uk/">WIMCS</a>, the Wales Institute of Mathematical and Computational Sciences and a Fellow of the <a href="https://www.learnedsociety.wales/">Learned Society of Wales</a>, a recently formed society that seeks to act as an Academy of learning of the kind that has long existed elsewhere in the United Kingdom and worldwide, but not in Wales.</p>
 
-<div class='query'>
-<p>Not offering a maths degree is one thing, but it seems that they don&#39;t even have a maths <em>department</em>! Who teaches basic maths courses to the CS (and chemistry, biology, electronics, …) majors? —<a class='existingWikiWord' href='/nlab/show/Toby+Bartels'>Toby</a></p>
+<div class="query">
+<p>Not offering a maths degree is one thing, but it seems that they don't even have a maths <em>department</em>! Who teaches basic maths courses to the CS (and chemistry, biology, electronics, …) majors? —<a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby</a></p>
 
 <p>In the UK, there are several universities that do not have mathematics departments and in which engineers, computer scientists, physicists and chemists do not get any theoretically based mathematics to speak of. Biologists have traditionally received no mathematics training after the age of 16. (Sometimes it shows and is the bane of the statisticians detailed to teach biology students statistics, and don’t mention psychology students! Note also that quite a few of the so called ‘financial experts’ in the UK have little or no maths. Some do, and I am not saying that they were any better in the causes of the recent crisis!)</p>
 
 <p>In Bangor, it is even worse. Not only is there no mathematics department. There are very few mathematicians <em>per se</em>, employed as full time members of staff and they are not employed as mathematicians as such. There are some mathematically competent people in some departments who do teach their undergraduates some mathematics. I, of course, do not think that is as good.</p>
 
-<p>-<a class='existingWikiWord' href='/nlab/show/Tim+Porter'>Tim</a></p>
+<p>-<a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim</a></p>
 
 <p>At least a couple of the top ten CS departments in the USA teach all of their own Maths classes. The actual Math department at most schools is too focused on calculus and analysis (at the undergraduate level). I think it has to be this way – it would be obscene for the CS department to dictate curriculum to the Math department.</p>
 
 <p>Don Knuth proposed that every professor should be required to have both a “major” and “minor” department, just like undergraduates must at most universities. That might be one step towards improving the situation – a way to influence the curriculum without compromising autonomy.</p>
 </div>
 
-<h2 id='what_you_can_find_here_and_on_my_personal_pages'>What you can find here and on my personal pages</h2>
+<h2 id="what_you_can_find_here_and_on_my_personal_pages">What you can find here and on my personal pages</h2>
 
-<p>I have given a summary in my <a href='http://ncatlab.org/timporter/show/HomePage'>private <math class='maruku-mathml' display='inline' id='mathml_6992d6eb4bf2516dd85cb8240be8fa4304690707_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab area</a> of some of the research area that I have worked in with references for further ‘enlightenment’. Some of these are in areas that continue to interest me, and I have various ‘projects’ and lists of ‘work in progress’ there as well, some of which are mentioned below. Some more recent ones have been added (August 2018).</p>
+<p>I have given a summary in my <a href="http://ncatlab.org/timporter/show/HomePage">private <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab area</a> of some of the research area that I have worked in with references for further ‘enlightenment’. Some of these are in areas that continue to interest me, and I have various ‘projects’ and lists of ‘work in progress’ there as well, some of which are mentioned below. Some more recent ones have been added (August 2018).</p>
 
 <p>I am writing a series of notes on the theory and application of crossed gadgetry in algebra and topology, and some parts of these notes (approximately first 10 chapters) have been made available on the web at various times. I am currently trying to write new sections on the links between homotopy quantum field theory and non-Abelian cohomology.</p>
 
-<p>I am also very interested in directed homotopy theory and the application of ideas from the general area of the infinity category/homotopy toolkit in topological data analysis, artificial intelligence, and computer science. This relates both to the use of <a class='existingWikiWord' href='/nlab/show/stratified+spaces'>stratified spaces</a> and possibly to <a class='existingWikiWord' href='/nlab/show/defects'>defects</a> in TQFTs. Some material can be found on those personal pages or should be added .</p>
+<p>I am also very interested in directed homotopy theory and the application of ideas from the general area of the infinity category/homotopy toolkit in topological data analysis, artificial intelligence, and computer science. This relates both to the use of <a class="existingWikiWord" href="/nlab/show/stratified+spaces">stratified spaces</a> and possibly to <a class="existingWikiWord" href="/nlab/show/defects">defects</a> in TQFTs. Some material can be found on those personal pages or should be added .</p>
 
-<p>See also my <a href='http://ncatlab.org/timporter/show/HomePage'>private <math class='maruku-mathml' display='inline' id='mathml_6992d6eb4bf2516dd85cb8240be8fa4304690707_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab area</a>, where I have put a link to a recent version of the first 10 chapters of the Menagerie.</p>
+<p>See also my <a href="http://ncatlab.org/timporter/show/HomePage">private <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab area</a>, where I have put a link to a recent version of the first 10 chapters of the Menagerie.</p>
 
-<p>Other goodies there include parts of a draft monograph on <a href='https://ncatlab.org/timporter/show/profinite+algebraic+homotopy'>profinite algebraic homotopy</a>, and a (slightly reformatted) version of a research proposal from 2002, that did not get funded, but may be useful as it does have some ideas in it (or related to it) that are worth pursuing especially since the recent progress on the cobordism and TQFT problems. There are links to notes for the Lisbon school and workshop on Higher Gauge Theory etc., (Feb. 2011). There are also some lecture notes from lectures in Hagen and La Laguna, and a survey article that grew out of talks in 1991 in Italy.</p>
+<p>Other goodies there include parts of a draft monograph on <a href="https://ncatlab.org/timporter/show/profinite+algebraic+homotopy">profinite algebraic homotopy</a>, and a (slightly reformatted) version of a research proposal from 2002, that did not get funded, but may be useful as it does have some ideas in it (or related to it) that are worth pursuing especially since the recent progress on the cobordism and TQFT problems. There are links to notes for the Lisbon school and workshop on Higher Gauge Theory etc., (Feb. 2011). There are also some lecture notes from lectures in Hagen and La Laguna, and a survey article that grew out of talks in 1991 in Italy.</p>
 
 <p>I have also put the start of a brief discussion of the relationships between the Cech and Vietoris methods and the newly developed methods of Topological Data Analysis.</p>
 
-<h3 id='list_of_goodies'>List of Goodies!!</h3>
+<h3 id="list_of_goodies">List of Goodies!!</h3>
 
-<p>Please go to <a href='http://ncatlab.org/timporter/show/HomePage'>private <math class='maruku-mathml' display='inline' id='mathml_6992d6eb4bf2516dd85cb8240be8fa4304690707_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab area</a> for downloads and more details.</p>
+<p>Please go to <a href="http://ncatlab.org/timporter/show/HomePage">private <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab area</a> for downloads and more details.</p>
 
 <ul>
-<li><em>The <a class='existingWikiWord' href='/nlab/show/Menagerie'>Menagerie</a></em>: a set of notes on crossed modules, higher dimensional analogues, simplicial techniques, homotopy coherence, and non-Abelian cohomology of various sorts. This version consists of 10 chapter. It will be updated periodically.</li>
+<li><em>The <a class="existingWikiWord" href="/nlab/show/Menagerie">Menagerie</a></em>: a set of notes on crossed modules, higher dimensional analogues, simplicial techniques, homotopy coherence, and non-Abelian cohomology of various sorts. This version consists of 10 chapter. It will be updated periodically.</li>
 </ul>
 
-<p>Several ‘cut down’ versions of these notes have been prepared for various workshops and as they are less long may be of use. For instance in February, 2011, there was a Workshop and School on Higher Gauge Theory, TQFT and Quantum Gravity in the IST, Lisbon, (7-13 February, 2011). A set of notes was prepared using the Menagerie as a ‘mine’ from which to extract the sections relevant to the theme of the workshop, which were then edited slightly. The result was entitled: <strong>Homotopy Quantum Field Theories meets the Crossed Menagerie: an introduction to HQFTs and their relationship with things simplicial and with lots of crossed gadgetry.</strong> A copy can be found <a class='existingWikiWord' href='/nlab/files/HQFT-XMenagerie.pdf' title=''>here</a>, whilst a table of contents and some more introductory material can be found via the other pages.</p>
+<p>Several ‘cut down’ versions of these notes have been prepared for various workshops and as they are less long may be of use. For instance in February, 2011, there was a Workshop and School on Higher Gauge Theory, TQFT and Quantum Gravity in the IST, Lisbon, (7-13 February, 2011). A set of notes was prepared using the Menagerie as a ‘mine’ from which to extract the sections relevant to the theme of the workshop, which were then edited slightly. The result was entitled: <strong>Homotopy Quantum Field Theories meets the Crossed Menagerie: an introduction to HQFTs and their relationship with things simplicial and with lots of crossed gadgetry.</strong> A copy can be found <a class="existingWikiWord" href="/nlab/files/HQFT-XMenagerie.pdf" title="">here</a>, whilst a table of contents and some more introductory material can be found via the other pages.</p>
 
 <ul>
 <li>
-<p>The ‘Luminy notes’: A cut down version of the Menagerie has been prepared for the LI2012 week on Algebra and computation (27 February – 2 March, 2012). A copy can be obtained by contacting me by e-mail or <a class='existingWikiWord' href='/nlab/files/Rewriting-and-homotopy.pdf' title=''>here</a>.</p>
+<p>The ‘Luminy notes’: A cut down version of the Menagerie has been prepared for the LI2012 week on Algebra and computation (27 February – 2 March, 2012). A copy can be obtained by contacting me by e-mail or <a class="existingWikiWord" href="/nlab/files/Rewriting-and-homotopy.pdf" title="">here</a>.</p>
 </li>
 
 <li>
@@ -359,7 +362,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><em><math class='maruku-mathml' display='inline' id='mathml_6992d6eb4bf2516dd85cb8240be8fa4304690707_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi></mrow><annotation encoding='application/x-tex'>\mathcal{S}</annotation></semantics></math>-categories, <math class='maruku-mathml' display='inline' id='mathml_6992d6eb4bf2516dd85cb8240be8fa4304690707_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi></mrow><annotation encoding='application/x-tex'>\mathcal{S}</annotation></semantics></math>-groupoids, Segal categories and quasicategories</em> The notes were prepared for a series of talks that I gave in Hagen in late June and early July 2003, and, with some changes, in the University of La Laguna, the Canary Islands, in September, 2003.</p>
+<p><em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒮</mi></mrow><annotation encoding="application/x-tex">\mathcal{S}</annotation></semantics></math>-categories, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒮</mi></mrow><annotation encoding="application/x-tex">\mathcal{S}</annotation></semantics></math>-groupoids, Segal categories and quasicategories</em> The notes were prepared for a series of talks that I gave in Hagen in late June and early July 2003, and, with some changes, in the University of La Laguna, the Canary Islands, in September, 2003.</p>
 </li>
 
 <li>
@@ -371,24 +374,25 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='more_information'>More Information</h2>
+<h2 id="more_information">More Information</h2>
 
-<p>You may also find me on: <a href='http://mathoverflow.net/users/3502/tim-porter'>MathOverflow</a> | <a href='http://orcid.org/0000-0001-7962-8471'>ORCiD</a></p>
+<p>You may also find me on: <a href="http://mathoverflow.net/users/3502/tim-porter">MathOverflow</a> | <a href="http://orcid.org/0000-0001-7962-8471">ORCiD</a></p>
 
 <p>and on Linkedin. (I have a gmail account and you can also contact me via Google+. The e-mail is initial\dot familyname\dot maths and then the normal ending for a gmail account.)</p>
-<div class='property'>category: <a class='category_link' href='/nlab/all_pages/people'>people</a></div>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
+
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 27, 2018 at 10:09:50.
+  Last revised on January  2, 2019 at 02:51:22.
   See the <a href="https://ncatlab.org/nlab/history/Tim Porter" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Tim+Porter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tim+Porter/50" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(50 revisions)</span> | <a href="/nlab/show/diff/Tim+Porter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tim+Porter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Tim+Porter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tim+Porter/51" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(51 revisions)</span> | <a href="/nlab/show/diff/Tim+Porter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tim+Porter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Tim Porter/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
