--- a/pages/1788.html
+++ b/pages/1788.html
@@ -395,20 +395,22 @@ margin-left: 0em;
 <path style="fill:none;stroke-width:0.39848;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M -24.0265 -1.140125 L 22.899281 -1.140125 " transform="matrix(1,0,0,-1,44.339,8.813)"></path>
 <path style="fill:none;stroke-width:0.39848;stroke-linecap:round;stroke-linejoin:round;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M -2.072739 2.39206 C -1.693832 0.95456 -0.850082 0.278779 0.00148 0.001435 C -0.850082 -0.279815 -1.693832 -0.955596 -2.072739 -2.38919 " transform="matrix(1,0,0,-1,67.43602,9.95456)"></path>
 </g>
-</svg></body></html>
+</svg>
+<p><a class="existingWikiWord" href="/nlab/files/Spaces+as+infinity-groupoids.pdf" title="">Spaces as infinity-groupoids.pdf</a></p>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on January  1, 2019 at 17:15:08.
+  Last revised on January  2, 2019 at 03:43:15.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1742" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1742 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1743" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1743 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
