--- a/pages/9880.html
+++ b/pages/9880.html
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="quantum_field_theory">Quantum field theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/FQFT">functorial quantum field theory</a></strong></p><h2 id="contents">Contents</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/FQFT">functorial quantum field theory</a></strong></p>
+
+<h2 id="contents">Contents</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cobordism+category">cobordism category</a></p>
 
@@ -435,11 +440,12 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/functorial+quantum+field+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -451,12 +457,14 @@ margin-left: 0em;
 <ul>
 <li><a href='#confinement_and_the_mass_gap'>Confinement and the mass gap</a></li>
 <li><a href='#quarkgluon_plasma'>Quark-gluon plasma</a></li>
+<li><a href='#HadronicPhysics'>Hadronic physics in flavour and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">g-2</annotation></semantics></math> anomalies</a></li>
 <li><a href='#WorldsheetAndBraneInstantons'>Worldsheet and brane instantons in string/M-theory</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#in_field_theory'>In field theory</a></li>
+<li><a href='#in_phenomeloogy'>In phenomeloogy:</a></li>
 <li><a href='#in_string_theory'>In string theory</a></li>
 <li><a href='#in_mtheory'>In M-Theory</a></li>
 </ul>
@@ -494,6 +502,20 @@ margin-left: 0em;
 <h3 id="quarkgluon_plasma">Quark-gluon plasma</h3>
 
 <p>At the other extreme of high <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> QCD, also the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a>, while now <a class="existingWikiWord" href="/nlab/show/confinement">deconfined</a> is thought to be strongly coupled.</p>
+
+<h3 id="HadronicPhysics">Hadronic physics in flavour and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">g-2</annotation></semantics></math> anomalies</h3>
+
+<p>Non-perturbative effects in <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a>-physics affects the discussion of possible beyond-<a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model</a> physics as seen in</p>
+
+<ol>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/flavour+anomalies">flavour anomalies</a> (<a href="#Nierste18">Nierste 18, 26/59</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/muon+anomalous+magnetic+moment">muon anomalous magnetic moment</a> (<a href="#Jegerlehner18b">Jegerlehner 18b, section 2</a>)</p>
+</li>
+</ol>
 
 <h3 id="WorldsheetAndBraneInstantons">Worldsheet and brane instantons in string/M-theory</h3>
 
@@ -665,9 +687,23 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h3 id="in_phenomeloogy">In phenomeloogy:</h3>
+
+<p>In <a class="existingWikiWord" href="/nlab/show/flavour+anomalies">flavour anomalies</a>:</p>
+
+<ul>
+<li id="Nierste18">
+<p>Ulrich Nierste, <em>Flavour Anomalies: Phenomenology and BSM Interpretations</em>, 2018 (<a href="https://indico.desy.de/indico/event/18498/session/5/contribution/52/material/slides/0.pdf">pdf</a>)</p>
+</li>
+
+<li id="Jegerlehner18b">
+<p>Fred Jegerlehner, <em>The Role of Mesons in Muon <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">g-2</annotation></semantics></math></em> (<a href="https://arxiv.org/abs/1809.07413">arXiv:1809.07413</a>)</p>
+</li>
+</ul>
+
 <h3 id="in_string_theory">In string theory</h3>
 
-<p>The form of the contribution of non-perturbative effects in string theory was originally observed in</p>
+<p>The form of the contribution of non-perturbative effects in <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> was originally observed in</p>
 
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Stephen+Shenker">Stephen Shenker</a>, <em>The Strength of nonperturbative effects in string theory</em>, presented at the Cargese Workshop on Random Surfaces, Quantum Gravity and Strings, Cargese, France, May 1990 (<a href="http://inspirehep.net/record/298523?ln=en">spire</a>)</li>
@@ -718,14 +754,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 27, 2018 at 02:20:53.
+  Last revised on January  2, 2019 at 09:38:53.
   See the <a href="https://ncatlab.org/nlab/history/non-perturbative effect" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/non-perturbative effect/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
