--- a/pages/16968.html
+++ b/pages/16968.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9344/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9344/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -407,7 +407,9 @@ margin-left: 0em;
 </li>
 </ul>
 <div>
-<p><a href="/nlab/edit/stable+homotopy+theory+-+contents">Edit this sidebar</a></p>
+<p>
+  <a href="/nlab/edit/stable+homotopy+theory+-+contents">Edit this sidebar</a>
+</p>
 </div></div></div>
 
 <h4 id="representation_theory">Representation theory</h4>
@@ -550,6 +552,7 @@ margin-left: 0em;
 </ul>
 <li><a href='#Properties'>Properties</a></li>
 <ul>
+<li><a href='#Monoidalness'>Monoidalness</a></li>
 <li><a href='#ROGDegrees'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>RO</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">RO(G)</annotation></semantics></math>-degrees</a></li>
 <li><a href='#relation_between_genuine_and_bredonequivariant_suspension'>Relation between genuine and Bredon-equivariant suspension</a></li>
 </ul>
@@ -599,6 +602,12 @@ margin-left: 0em;
 <p>(e.g. <a href="#Schwede15">Schwede 15, example 2.11</a>)</p>
 
 <h2 id="Properties">Properties</h2>
+
+<h3 id="Monoidalness">Monoidalness</h3>
+
+<p>In generalization to the <a class="existingWikiWord" href="/nlab/show/strong+monoidal+functor">strong monoidal</a>-<a class="existingWikiWord" href="/nlab/show/structure">structure</a> on the ordinary <a class="existingWikiWord" href="/nlab/show/suspension+spectrum">suspension spectrum</a> functor with respect to the <a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+smash+product+of+spectra">symmetric monoidal smash product of spectra</a> (see <a href="suspension+spectrum#StrongMonoidalness">there</a>) also the equivariant suspension spectrum functor ought to constitute a <a class="existingWikiWord" href="/nlab/show/monoidal+%28infinity%2C1%29-functor">monoidal (infinity,1)-functor</a> from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant homotopy theory</a> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a>.</p>
+
+<p>This follows from general properties of <a class="existingWikiWord" href="/nlab/show/stabilization">stabilization</a> when regarding <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> as the result of inverting <a class="existingWikiWord" href="/nlab/show/smash+product">smash product</a> with all <a class="existingWikiWord" href="/nlab/show/representation+spheres">representation spheres</a>, via <a href="#stabilization#Robalo12">Robalo 12, last clause of Prop. 4.1 with last clause of Prop. 4.10 (1)</a>, generalized to sets of objects as in <a href="stabilization#Hoyois15">Hoyois 15, section 6.1</a>, see also <a href="stabilization#Hoyois15">Hoyois 15, Def. 6.1</a>.</p>
 
 <h3 id="ROGDegrees"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>RO</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">RO(G)</annotation></semantics></math>-degrees</h3>
 
@@ -656,14 +665,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  4, 2018 at 00:45:49.
+  Last revised on January  2, 2019 at 11:15:06.
   See the <a href="https://ncatlab.org/nlab/history/equivariant suspension spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+suspension+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+suspension+spectrum/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/equivariant+suspension+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+suspension+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+suspension+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+suspension+spectrum/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/equivariant+suspension+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+suspension+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant suspension spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
