--- a/pages/3121.html
+++ b/pages/3121.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/586/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/586/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -550,13 +550,21 @@ margin-left: 0em;
 <p>Discussion of stabilization as inversion of smashing with a suspension objects, and the relation between stabilization of <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-categories">(∞,1)-categories</a> (to <a class="existingWikiWord" href="/nlab/show/stable+%28%E2%88%9E%2C1%29-categories">stable (∞,1)-categories</a>) and of <a class="existingWikiWord" href="/nlab/show/model+categories">model categories</a> (to <a class="existingWikiWord" href="/nlab/show/stable+model+categories">stable model categories</a>) in</p>
 
 <ul>
-<li id="Robalo12"><a class="existingWikiWord" href="/nlab/show/Marco+Robalo">Marco Robalo</a>, section 4 of <em>Noncommutative Motives I: A Universal Characterization of the Motivic Stable Homotopy Theory of Schemes</em>, June 2012 (<a href="http://arxiv.org/abs/1206.3645">arxiv:1206.3645</a>)</li>
+<li id="Robalo12">
+<p><a class="existingWikiWord" href="/nlab/show/Marco+Robalo">Marco Robalo</a>, section 4 of <em>Noncommutative Motives I: A Universal Characterization of the Motivic Stable Homotopy Theory of Schemes</em>, June 2012 (<a href="http://arxiv.org/abs/1206.3645">arxiv:1206.3645</a>)</p>
+
+<p>published as</p>
+</li>
+
+<li id="Robalo15">
+<p><a class="existingWikiWord" href="/nlab/show/Marco+Robalo">Marco Robalo</a>, section 2 of <em>K-theory and the bridge from motives to noncommutative motives</em>, Advances in Mathematics Volume 269, 10 January 2015 (<a href="https://doi.org/10.1016/j.aim.2014.10.011">doi:10.1016/j.aim.2014.10.011</a>)</p>
+</li>
 </ul>
 
-<p>which appears published as</p>
+<p>with further remarks in</p>
 
 <ul>
-<li id="Robalo15"><a class="existingWikiWord" href="/nlab/show/Marco+Robalo">Marco Robalo</a>, section 2 of <em>K-theory and the bridge from motives to noncommutative motives</em>, Advances in Mathematics Volume 269, 10 January 2015 (<a href="https://doi.org/10.1016/j.aim.2014.10.011">doi:10.1016/j.aim.2014.10.011</a>)</li>
+<li id="Hoyois15"><a class="existingWikiWord" href="/nlab/show/Marc+Hoyois">Marc Hoyois</a>, section 6.1 of <em>The six operations in equivariant motivic homotopy theory</em>, Adv. Math. 305 (2017), 197-279 (<a href="https://arxiv.org/abs/1509.02145">arXiv:1509.02145</a>)</li>
 </ul>
 </body></html>
 
@@ -564,14 +572,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 30, 2018 at 12:40:28.
+  Last revised on January  2, 2019 at 11:04:07.
   See the <a href="https://ncatlab.org/nlab/history/stabilization" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stabilization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stabilization/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/stabilization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stabilization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stabilization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stabilization/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/stabilization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stabilization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stabilization/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
